# eeTranslator

./: README.md  pyproject.toml
data/: rtm_s2.csv
eetranslator/: eeMLPRegressor.py  eeStandardScaler.py
examples/: rtm_inversion.ipynb
