[tool.poetry]
name = "eetranslator"
version = "0.1.0"
description = "Repository containing functionality to use locally-trained scikit-learn functions to perform the prediction step on GEE server side. Currently MLPRegressor and StandardScaler are implemented. Note that the repo is work in progress and has not been thoroughly tested yet. "
authors = ["speckerf <felixspecker@hotmail.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
earthengine-api = "^0.1.384"
loguru = "^0.7.2"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
geemap = "^0.29.6"
ipyleaflet = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
